<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_result_here"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="86dp" />

    <Button
        android:id="@+id/click_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="430dp" />

    <TextView
        android:id="@+id/text_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_1_resource"
        app:layout_constraintEnd_toStartOf="@+id/edit_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="223dp" />

    <TextView
        android:id="@+id/text_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_2"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="356dp" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_a_team_here"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/edit_text_resource"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_1"
        tools:layout_editor_absoluteY="208dp" />

    <EditText
        android:id="@+id/edit_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_a_team_here"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/edit_text_resource"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="356dp" />

</androidx.constraintlayout.widget.ConstraintLayout>